Changed user table
changed type col to usertype and added an admin user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,10 @@
 
 one:
   username: MyString
-  type: 
+  usertype: MyString
   password: MyString
 
 two:
   username: MyString
-  type: 
+  usertype: MyString
   password: MyString
