--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  username: MyString
-  usertype: MyString
+  UserName: MyString
+  admin: false
   password: MyString
 
 two:
-  username: MyString
-  usertype: MyString
+  UserName: MyString
+  admin: false
   password: MyString
