Revert "changed user type to admin boolean"
This reverts commit 06bdd1027bd09998025d17bcd1dd6ab20328b021.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  UserName: MyString
-  admin: false
+  username: MyString
+  usertype: MyString
   password: MyString
 
 two:
-  UserName: MyString
-  admin: false
+  username: MyString
+  usertype: MyString
   password: MyString
